syntax = "proto3";

package frontend_service;

import "ddl_service.proto";

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

message GetTableReplacePlanRequest {
  uint32 database_id = 1;
  uint32 owner = 2;
  string table_name = 3;
  ddl_service.TableSchemaChange table_change = 4;
}

message GetTableReplacePlanResponse {
  ddl_service.ReplaceJobPlan replace_plan = 1;
}

message GetRunningSqlsRequest {}

message GetRunningSqlsResponse {
  repeated RunningSql running_sqls = 1;
}

message RunningSql {
  int32 process_id = 1;
  string user_name = 2;
  string peer_addr = 3;
  string database = 4;
  optional uint64 elapsed_millis = 5;
  optional string sql = 6;
}

message CancelRunningSqlRequest {
  int32 process_id = 1;
}

message CancelRunningSqlResponse {}

service FrontendService {
  rpc GetTableReplacePlan(GetTableReplacePlanRequest) returns (GetTableReplacePlanResponse);
  rpc GetRunningSqls(GetRunningSqlsRequest) returns (GetRunningSqlsResponse);
  rpc CancelRunningSql(CancelRunningSqlRequest) returns (CancelRunningSqlResponse);
}
